tests/baselines/reference/restElementWithBindingPattern.errors.txt
tests/cases/conformance/es6/destructuring/restElementWithBindingPattern.ts(1,9): error TS2501: A rest element cannot contain a binding pattern.


==== tests/cases/conformance/es6/destructuring/restElementWithBindingPattern.ts (1 errors) ====
    var [...[a, b]] = [0, 1];
            ~~~~~~
!!! error TS2501: A rest element cannot contain a binding pattern.